# anytime

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  TODO.md  idea.md  pyproject.toml
.claude/: ralph-loop.local.md
anytime/: __init__.py  __main__.py  config.py  demo.py  errors.py  plotting.py  recommend.py  spec.py  types.py
anytime/atlas/: __init__.py  report.py  runner.py  scenarios.py  types.py
anytime/cli/: main.py
anytime/core/: __init__.py  (+1 more)
configs/: atlas_smoke.yaml
demos/: app.py
docs/: ASSUMPTIONS_AND_TIERS.md  ATLAS_INTERPRETATION.md  RELEASE_CHECKLIST.md  STOPPING_RULES.md
examples/: 00_super_simple.py  01_hello_anytime.py  02_bernoulli_exact.py  03_ab_test_simple.py  04_streaming_monitor.py  05_variance_adaptive.py  06_two_sample_cs.py  07_early_stopping.py  08_multiple_comparisons.py  09_diagnostic_checks.py  10_custom_datasets.py  11_real_world_data.py  12_currency_monitoring.py  13_retail_analytics.py  14_medical_trials.py  15_bandit_optimization.py  16_time_series.py  17_sla_monitoring.py  18_stock_prices.py  19_weather.py  20_sports.py  21_crypto.py  22_traffic.py  23_social.py  24_gaming.py  25_surveys.py  26_learning.py  27_habits.py  README.md
slides/: .slidegauge.cache.json  illustrations.py  peeking-lecture.md
tests/: test_atlas_smoke.py  test_benchmark.py  test_cli.py  test_config.py  test_cs.py  test_csv_reader.py  test_diagnostics.py  test_estimators.py  test_evalues.py  test_optional_stopping.py  test_placeholder.py  test_plotting.py  test_properties.py  test_recommender.py  test_scenarios.py  test_spec.py  test_twosample.py
(+24 files in other folders)
